@@ -66,6 +66,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   links with non-NFC character references work correctly.
 * (bug 22991) wgUserGroups JavaScript variable now reports * group for
   anonymous users instead of null.
+* (bug 22627) Remove PHP notice when deleting a page only hidden users edited.
 
 == API changes in 1.17 ==
 * (bug 22738) Allow filtering by action type on query=logevent
